--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://jf2028mp.github.io/portfolio/",
+  "homepage": "https://jf2028mp.github.io/portfolio/",
   "dependencies": {
     "@material-ui/core": "^3.9.1",
     "@material-ui/icons": "^3.0.2",
     "gh-pages": "^2.0.1",
+    "nuka-carousel": "^4.4.7",
     "react": "^16.7.0",
+    "react-device-detect": "^1.6.2",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
